--- a/themes/new_age.css
+++ b/themes/new_age.css
@@ -93,3 +93,11 @@
 .bulkuploadbox a{
     color:#006699;
 }
+
+.prevaluationbox {
+    height:auto;
+    color:#000;
+    font-weight:bold;
+    margin-top:15px;
+    float:left;
+}
