--- a/themes/new_age.css
+++ b/themes/new_age.css
@@ -30,6 +30,7 @@
 .quantitybox {
     float: left;
     padding-right: 10px;
+    
 }
 
 .quantitylabel {
@@ -167,6 +168,8 @@
 
         .abundaCalcTbl tbody td.quantity {
             width: 40px !important;
+            text-align: center !important;
+            
         }
 
         .abundaCalcTbl tbody td.item {
@@ -184,6 +187,7 @@
 
         .abundaCalcTbl tbody td.delete {
             width: 70px !important;
+            text-align: center !important;
         }
 
 .blatent {
@@ -195,6 +199,6 @@
 /* Product Details */
 
 #abundaCalcTbl{
-    width: 900px;
     background-color: #000;
+    width: 870px;
 }
