--- a/themes/new_age.css
+++ b/themes/new_age.css
@@ -220,6 +220,14 @@
     cursor: default;
 }
 
+.likebutton:hover {
+    box-shadow: 1px 1px 2px 1px #333;
+}
+
+.likebutton:active {
+    box-shadow: 1px 1px 2px 1px #333 inset;
+}
+
 /* Bulk Upload */
 
 #bulk {
