--- a/themes/new_age.css
+++ b/themes/new_age.css
@@ -281,3 +281,59 @@
     padding:5px;
     background-color:lightgrey;
 }
+
+#search_results_list {
+    position: absolute !important;
+    background: white !important;
+    left: 207px !important;
+    top: 69px !important;
+    width: 75% !important;
+    height:auto !important;
+    display:none !important;
+}
+
+.searchHeader {
+    background-color:#6699ff !important;
+    color:#ffffff !important;
+    border:#cccccc 1px solid !important;
+    font-weight:bold !important;
+    font-size:15px !important;
+}
+
+.search_results_li {
+    margin-bottom: 0px !important;
+    margin-top: -1px !important;
+    margin-left: 0px !important;
+}
+
+    .search_results_li li {
+        list-style: none !important;
+        display: block !important;
+        padding: 2px !important;
+        font-weight: normal !important;
+        font-size: 15px !important;
+    }
+
+.inlineblock {
+    display:inline-block !important;
+    padding-left:5px !important;
+}
+
+.search_result_row {
+    background-color: #ffffff !important;
+    color: #333333 !important;
+    border-left: #cccccc 1px solid !important;
+    border-right: #cccccc 1px solid !important;
+    border-bottom: #cccccc 1px solid !important;
+}
+
+    .search_results_li :hover {
+        background-color:#ddd !important;
+        cursor:default !important;
+    }
+
+    .search_result_row a {
+        text-decoration: none !important;
+        color: #333 !important;
+        cursor:default !important;
+    }
